--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "gatsby": "^4.18.2",
+    "gatsby-plugin-sass": "^5.18.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
