--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
+    "build-css": "tailwindcss build src/index.css -O src/pages/styles.css",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "gatsby": "^4.18.2",
-    "gatsby-plugin-sass": "^5.18.1",
+    "gatsby": "^4.19.0",
+    "gatsby-plugin-sass": "^3.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sass": "^1.53.0"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.5.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.19.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.7.4"
   }
 }
