--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "cornelius-website",
-  "author": "mochidamnit",
+  "author": "Cornelius Ang",
   "keywords": [
     "gatsby"
   ],
