--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "gatsby": "^4.19.0",
     "gatsby-plugin-sass": "^3.2.0",
     "gh-pages": "^4.0.0",
@@ -32,7 +34,7 @@
     "autoprefixer": "^10.4.7",
     "gatsby-plugin-postcss": "^5.19.0",
     "postcss": "^8.4.14",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
 }
